Fix minikube post slug

--- a/content/posts/minikube-local-docker-images/index.mdx
+++ b/content/posts/minikube-local-docker-images/index.mdx
@@ -9,6 +9,7 @@ tags:
   - kubernetes
   - docker
   - minikube
+slug: "/minikube-local-docker-images/"
 ---
 
 When developing locally with [Minikube](https://kubernetes.io/docs/setup/minikube/), you may want to use locally built Docker images instead of images hosted in a registry. Why push images up to Google's GCR or AWS ECR if you're only testing locally? Thankfully, this is simple with only a few steps.
