--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,6 +5,6 @@ slug: "/about/"
 
 Hi!
 
-I'm Nick. I'm a software engineer, working at [Gatsby](https://www.gatsbyjs.com).
+I'm Nick. I'm a software engineer.
 
 This is my blog. I write about Node.js, Go, Python, infrastructure, data, and maybe some other things.
