--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,5 +1,5 @@
 ## Hi.
 
-I'm Nick. This is my blog.
+This is my blog.
 
-I write about Node.js, Go, Python, infrastructure, and data.
+I write about Python, Go, Node.js, cloud infrastructure, and data.
