Fix S3 Cloudflare link

--- a/content/posts/static-websites-s3-cloudflare/index.mdx
+++ b/content/posts/static-websites-s3-cloudflare/index.mdx
@@ -7,6 +7,7 @@ tags:
   - cloudflare
   - s3
   - cloudfront
+slug: "/static-websites-with-aws-s-3-and-cloudflare/"
 ---
 
 Amazon Web Service's [S3](https://aws.amazon.com/s3/) is an excellent place to deploy a static website. If [Cloudflare](https://www.cloudflare.com/) is your DNS provider, however, there are a few tricks that you need to be aware of when setting up your static site.
